@@ -1,13 +1,9 @@
 #!perl
-use 5.006;
+use 5.014;
 use strict;
 use warnings;
-use Test::More;
-
-plan tests => 1;
-
-BEGIN {
-    use_ok( 'App::MHFS' ) || print "Bail out!\n";
-}
+use Test2::V0;
+use App::MHFS;
 
 diag( "Testing App::MHFS $App::MHFS::VERSION, Perl $], $^X" );
+skip_all("there are no tests");
