@@ -3,6 +3,7 @@ v0.7.0  XXXX-XX-XX
         Split App/MHFS.pm into multiple modules.
         `use 5.014;` consistently across packages
         MHFS::BitTorrent::Bencoding, MHFS::Util - export with @EXPORT_OK
+        Add running tests to release process
 
 v0.6.0  2024-10-21
         Kodi JSON API `/kodi/movies` and `/kodi/tv`
